# mono-dynamic-obstacle-detector

./: README.md
src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolo_ros_ros1/: CMakeLists.txt  package.xml  requirements.txt
src/yolo_ros_ros1/scripts/: yolo_track_node.py
