<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros_ros1</name>
  <version>0.0.0</version>
  <description>ROS 1 package for YOLO tracking</description>
  <maintainer email="todo@todo.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend> <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>yolo_msgs</depend>

</package>